@@ -6,7 +6,8 @@ CHANGELOG
 	Jun 28, 2009
 
 	* extra/tablature.py: Fixed bug in from_Suite, added add_headers (closes
-	issue #62), mark beats in from_Bar (closes issue #60)
+	issue #62), mark beats in from_Bar (closes issue #60), added 
+	instrument and tuning description (closes issue #61).
 
 ================================================================================
 
